Fixed popup screen on mobile view

--- a/assets/sass/_core.scss
+++ b/assets/sass/_core.scss
@@ -1287,7 +1287,7 @@ body.popup-open {
   display: none;
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 10vh 20px;
   position: fixed;
   top: 0;
   left: 0;
@@ -1298,18 +1298,18 @@ body.popup-open {
   z-index: 99999;
   overflow: auto;
   &.show {
-    display: block;
+    // display: block;
+    @include flexgroup();
+    @include flexbox-justify(center);
+    @include flexbox-align-items(center);
   }
   .popup-content {
-    max-width: 850px;
+    max-width: 900px;
     width: 100%;
     min-height: 15em;
     background: $color-gold;
     box-shadow: 0 4px 14px rgba(0,0,0,0.2);
     position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translateX(-50%) translateY(-50%);
     color: #FFF;
     @include animateThis(1s);
     @include animateEffect('fadeIn');
@@ -1440,6 +1440,45 @@ body.popup-open {
       &:before, &:after {
         background: rgba(255,255,255,1);
       }
+    }
+  }
+
+  #closePopUp {
+    display: block;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: -40px;
+    right: -5px;
+    opacity: 0.7;
+    transform: scale(0.8);
+    span {
+      display: none;
+    }
+    &:before, &:after {
+      content:"";
+      display: block;
+      width: 100%;
+      height: 2px;
+      background: #FFF;
+      position: absolute;
+      top: 14px;
+      left: 0;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+    &:hover {
+      opacity: 1;
+    }
+    @media screen and (max-width: $midwidth) {
+      top: -42px;
+      right: 42%;
+      transform: translateX(-42%);
     }
   }
 }
@@ -2306,7 +2345,7 @@ body.logged-in.admin-bar {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba($color-green,90%);
+  background-color: rgba($color-green,98%);
   z-index: 300;
   @include animateThis(0.5s);
   &.show {
